Sabrina: Banco completo, Aluno desenvolvido e necessidade de atenção no site institucional

--- a/escola/templates/escola/aluno_dashboard.html
+++ b/escola/templates/escola/aluno_dashboard.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Aluno - Colégio Paulo de Alcântara</title>
-    <link rel="stylesheet" href="{% static 'escola/static/escola/css/aluno_dashboard.css' %}">
+    <link rel="stylesheet" href="{% static 'escola/css/aluno.css' %}">
 </head>
 <body>
     <div class="container">
@@ -234,6 +234,6 @@
         </main>
     </div>
 
-    <script src="{% static 'escola/js/base.js' %}"></script>
+    <script src="{% static 'escola/js/aluno.js' %}"></script>
 </body>
 </html>
