--- a/escola/templates/escola/aluno_boletim.html
+++ b/escola/templates/escola/aluno_boletim.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boletim Escolar - Colégio Paulo de Alcântara</title>
-    <link rel="stylesheet" href="{% static 'escola/css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'escola/css/aluno.css' %}">
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
 <body>
@@ -155,6 +155,6 @@
             </div>
         </main>
     </div>
-    <script src="{% static 'escola/js/base.js' %}"></script>
+    <script src="{% static 'escola/js/aluno.js' %}"></script>
 </body>
 </html>
