--- a/escola/templates/escola/aluno_evento.html
+++ b/escola/templates/escola/aluno_evento.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Adicionar Evento - Colégio Paulo de Alcântara</title>
-    <link rel="stylesheet" href="{% static 'escola/css/adicionar_evento.css' %}">
+    <link rel="stylesheet" href="{% static 'escola/css/aluno.css' %}">
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
 <body>
@@ -20,6 +20,6 @@
             </form>
         </div>
     </div>
-    <script src="{% static 'escola/js/adicionar_evento.js' %}"></script>
+    <script src="{% static 'escola/js/aluno.js' %}"></script>
 </body>
 </html>
