--- a/escola/templates/escola/aluno_justificativa.html
+++ b/escola/templates/escola/aluno_justificativa.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Justificativa de Faltas - Colégio Paulo de Alcântara</title>
-    <link rel="stylesheet" href="{% static 'escola/css/base.css' %}">
-    <link rel="stylesheet" href="{% static 'escola/css/justificativa.css' %}">
+    <link rel="stylesheet" href="{% static 'escola/css/aluno.css' %}">
+    <link rel="stylesheet" href="{% static 'escola/css/aluno.css' %}">
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
 <body class="justificativa-body">
@@ -22,6 +22,6 @@
             <button type="submit" class="btn-enviar">Enviar</button>
         </form>
     </div>
-    <script src="{% static 'escola/js/justificativa.js' %}"></script>
+    <script src="{% static 'escola/js/aluno.js' %}"></script>
 </body>
 </html>
