--- a/escola/templates/escola/aluno_horario.html
+++ b/escola/templates/escola/aluno_horario.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Horários Escolares - Colégio Paulo de Alcântara</title>
-    <link rel="stylesheet" href="{% static 'escola/css/base.css' %}">
-    <link rel="stylesheet" href="{% static 'escola/css/horario.css' %}">
+    <link rel="stylesheet" href="{% static 'escola/css/aluno.css' %}">
+    <link rel="stylesheet" href="{% static 'escola/css/aluno.css' %}">
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <style>
         /* Pequeno ajuste para tabela dinâmica se não tiver no CSS externo */
